This change log uses the following legend to list items:
[+] New feature added
[*] Bug Fix
[#] Change/Improvement to old code

================================
Qtilities v1.4 Changes
================================
    To see all closed issues in the issue tracker linked to this milestone, see the following page:
    https://github.com/JPNaude/Qtilities/issues/milestones

    General:
    ============================
    [+] Qtilities is now also available under LGPL v2.1.

    [*] Fixed some issues which caused compilation on Mac to fail.
    [*] Fixed compilation issue with Qt5. See http://github.com/JPNaude/Qtilities/issues/92 for more details.

    ============================
    QtilitiesLogging:
    ============================

    ============================
    QtilitiesCore:
    ============================
    [+] Added ITask::lastErrorMessages(), ITask::setLastErrorMessagesStackSize() and ITask::lastErrorMessagesStackSize().

    [#] FileUtils::comparePaths() and FileUtils::pathStartsWith() got new case sensitivity parameters which can be used on Windows.
    [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now virtual.

    [*] Fixed bugs in processing of messages by QtilitiesProcess which in some cases resulted in application hangs.

    ============================
    QtilitiesCoreGui:
    ============================
    [*] Fixed issue with TreeFileItem::setFilePath() where it did not allow the case of a file to be changed.
    [*] Fixed NamingPolicyFilter::ProhibitDuplicateNamesCaseSensitive not always handled correctly in NamingPolicyFilter::Evaluate.
    [*] Improved and fixed issues in SingleTaskWidget.

    ============================
    QtilitiesExtensionSystem:
    ============================

    ============================
    QtilitiesProjectManagement:
    ============================
    [*] Fixed issue where duplicates of recent projects appeared in the recent projects menu.