@@ -3,7 +3,7 @@
 
 <div id="container">
 The recommended way to contribute to the %Qtilities project is to fork the repository on <a href="http://github.com/JPNaude/Qtilities">Github</a>. This allows you to
-modify and extend Qtilities in your own forked repository.
+modify and extend %Qtilities in your own forked repository.
 <br><br>
 If you however want to contribute to the master %Qtilities repository, it is required to complete a Contributor License Agreement. This counts for any
 contributions including: code, documentation and ideas. Alternatively, you can feel free to Fork the repository and work on your own modifications there.
