@@ -57,12 +57,12 @@
             <div class="rounded_top" id="links_holder" style="width:200px; float:left; background-color: #999999">
             <div class="rounded_top" id="current_header" style="background-color: #333333; padding:5px; text-align:center; color:#FFFFFF"><b>Latest Version</b></div>
             <div id="current_body" style="padding:5px; color:#000000">
-                <p><b>Current:</b> v1.3 (17/04/2013)</p>
+                <p><b>Current:</b> v1.4 (30/05/2013)</p>
                 <ul>
-                    <li><a href="http://github.com/JPNaude/Qtilities/zipball/v1.3">Download Archive</a></li>
+                    <li><a href="http://github.com/JPNaude/Qtilities/zipball/v1.4">Download Archive</a></li>
                     <li><a href="http://github.com/JPNaude/Qtilities/wiki/Generating-Qtilities-Documentation#creating-qt-assistant-help-file-qch">Qt Assistant Help</a></li>
-                    <li><a href="page_whats_new_v1_3.html">What's New</a></li>
-                    <li><a href="http://raw.github.com/JPNaude/Qtilities/v1.3/Changelog.txt">Detailed Changes</a></li>
+                    <li><a href="page_whats_new_v1_4.html">What's New</a></li>
+                    <li><a href="http://raw.github.com/JPNaude/Qtilities/v1.4/Changelog.txt">Detailed Changes</a></li>
                 </ul>
             </div>
             <div id="first_steps_header" style="background-color: #333333; padding:5px; text-align:center; color:#FFFFFF"><b>First Steps</b></div>
